CI images update

--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-08 17:37:05
+lastsearch = 2024-08-08 21:43:21
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
 url = https://changagoidemsonghong.com/chan-ga-goi-bc22
 
 [songhong.info]
-match = -66.7%%
-title = Bộ chăn ga gối cotton 100%% mã màu BC22-063 - Sông Hồng ...
-url = https://songhong.info/chan-ga-goi-bc63
+match = -33.3%%
+title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
+url = https://songhong.info/chan-ga-goi-bc22
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -87.5%%
-title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
+match = 12.5%%
+title = Everon 2022 - Bộ chăn ga gối
+url = https://www.everonvn.vn/bo-suu-tap/everon-2022.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Bộ chăn gối cao cấp Sông Hồng SH_UC22 025
 url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-2023/bo-chan-goi-cao-cap-song-hong-sh-uc22-025.html
 
 [everon.com.vn]
-match = -66.7%%
-title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/?srsltid=AfmBOooduwuFwlREKweIKiKnnrD0fEJHl1glvfyVqp3qNcwkrCvkY69F
+match = 29.2%%
+title = Bộ Chăn Ga Everon EPM 22070
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22070/
 
 [dailyeveron.vn]
 match = -66.7%%
@@ -115,4 +115,14 @@ url = https://m.facebook.com/p/Nam-phuongshop-100023919678729/
 match = 0.0%%
 title = BỘ CHĂN GA GỐI CÁNH ĐỒNG NẮNG - EST24035
 url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
+
+[lasantevn.com]
+match = -66.7%%
+title = BỘ CHĂN GA LASANTE PHÁP - LAN TÂY - La Sante Việt Nam
+url = https://lasantevn.com/bo-chan-ga-hoa-lan-tay-lasante-phap/
+
+[madivahome.vn]
+match = -37.5%%
+title = Bộ Chun chần MS2404 - CÔNG TY CP MADIA HOME
+url = https://madivahome.vn/san-pham/bo-chun-chan-ms2404/
 
