--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-08 20:34:10
+lastsearch = 2024-08-08 21:41:35
 
 [shopee.vn]
 match = -51.9%%
@@ -159,7 +159,7 @@ url = https://www.sendo.vn/men-long-tuyet.htm
 [www.bebong.vn]
 match = 36.4%%
 title = Chăn lông tuyết cho bé
-url = https://www.bebong.vn/products/chan-long-tuyet-cho-be?srsltid=AfmBOoq8NK50iWpaTGppV6vdMpRwt7Zy5UHrmvRiPGOM3yavfsLfQyDU
+url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
 
 [demxanh.com]
 match = -18.5%%
