--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-08 20:44:11
+lastsearch = 2024-08-08 21:42:18
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -106.7%%
-title = Busan Korean Food | Ho Chi Minh City
-url = https://www.facebook.com/Busan.Korean.Food/?locale=vi_VN
+match = -26.7%%
+title = Du học Hàn Quốc - ANIDO
+url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
 
 [hoc247.vn]
 match = -213.3%%
@@ -437,7 +437,7 @@ title = Vị Trí Cửa Hàng Homefarm Tại TP Hồ Chí Minh
 url = https://homefarm.vn/pages/locationhcm
 
 [vietnamese.alibaba.com]
-match = -220.0%%
-title = Handmade D2 thép cố định lưỡi dao Skinner với xương ...
+match = -233.3%%
+title = Handmade D2 thép cố định lưỡi dao Skinner với xương Lạc Đà ...
 url = https://vietnamese.alibaba.com/product-detail/Handmade-D2-Steel-Fixed-Blade-Skinner-11000015145175.html
 
