--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-08 16:44:49
+lastsearch = 2024-08-08 21:34:17
 
 [us.misumi-ec.com]
 match = -325.0%%
@@ -385,4 +385,9 @@ url = https://www.oronite.com/about/contact.html
 match = -225.0%%
 title = Entering Classes Information < MD-PhD Program
 url = https://medicine.yale.edu/mdphd/people/students/
+
+[gastateusbc.com]
+match = -91.7%%
+title = Forms & Calendar of Events
+url = https://gastateusbc.com/forms/
 
