CI images update

--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-08 18:36:13
+lastsearch = 2024-08-08 22:13:21
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -79,7 +79,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 [demxanh.com]
 match = 25.0%%
 title = Chiếu trúc hạt Hương Trúc nâu cà phê
-url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html?srsltid=AfmBOoptnkpOjz1bhDwvJ190g7nmJuuIRpDLEPc4suE9RDbY7mMcJ89f
+url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html?srsltid=AfmBOoqTKCAtOxK5EB2_kZCnTFTEuK2MdaVUAb9b4Wph3h4Nux_jVVHG
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -365,4 +365,9 @@ url = https://toancaucokhi.com/mui-khoan-tu-tct-16-18-20-22-23-36-40mm/
 match = -87.5%%
 title = Công ty TNHH Napacomp - Nhà cung cấp Hệ thống nén khí ...
 url = https://napacomp.vn/
+
+[kimkhibacviet-190.vn]
+match = -45.8%%
+title = Bảng quy chuẩn thép hộp vuông, chữ nhật mạ kẽm
+url = https://kimkhibacviet-190.vn/bang-quy-chuan-thep-hop-vuong,-chu-nhat-ma-kem-p501.html
 
