--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-08 05:56:17
+lastsearch = 2024-08-08 22:17:17
 
 [www.tui.co.uk]
 match = -250.0%%
@@ -455,4 +455,9 @@ url = https://www.paddleyourownkanoo.com/2024/08/07/14-people-injured-as-korean-
 match = -25.0%%
 title = Tatty TUI Dreamliners
 url = https://www.airliners.net/forum/viewtopic.php?t=1479519
+
+[www.federalregister.gov]
+match = -316.7%%
+title = Endangered Species Status for the Long Valley Speckled ...
+url = https://www.federalregister.gov/documents/2024/08/08/2024-17249/endangered-and-threatened-wildlife-and-plants-endangered-species-status-for-the-long-valley-speckled
 
