--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-08 21:34:17
+lastsearch = 2024-08-08 22:22:49
 
 [us.misumi-ec.com]
-match = -325.0%%
-title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
+match = -350.0%%
+title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA Series
 url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
 
 [www.amazon.com]
@@ -27,9 +27,9 @@ title = Phu Ha - Lawrenceville, Georgia, United States
 url = https://www.linkedin.com/in/phu-ha-b87850148
 
 [www.gwhospital.com]
-match = -275.0%%
-title = Welcome to GW University Hospital | Washington, DC
-url = https://www.gwhospital.com/
+match = 0.0%%
+title = 
+url = https://www.gwhospital.com/about
 
 [finance.saccounty.gov]
 match = -150.0%%
@@ -132,9 +132,9 @@ title = Obituary information for Margaret Holt Chapman
 url = https://www.whitsellfuneralhome.com/obituaries/Margaret-Holt-Chapman?obId=31564220
 
 [profiles.stanford.edu]
-match = -108.3%%
-title = Ami Bhatt - Stanford Profiles
-url = https://profiles.stanford.edu/ami-bhatt
+match = -133.3%%
+title = Aaron Newman - Stanford Profiles
+url = https://profiles.stanford.edu/aaron-newman
 
 [www.fivebranches.edu]
 match = -33.3%%
@@ -167,9 +167,9 @@ title = Find an Agent for UCD | View our International Agents
 url = https://www.ucd.ie/global/agents/
 
 [dnr.maryland.gov]
-match = -175.0%%
-title = Early Detection Species for Southern MD
-url = https://dnr.maryland.gov/wildlife/Documents/Early_Detection_Species_for_SouthernMD.pdf
+match = -291.7%%
+title = Early Detection Species for Central MD - Maryland DNR
+url = https://dnr.maryland.gov/wildlife/Documents/Early_Detection_Species_for_CentralMD.pdf
 
 [www.presidency.ucsb.edu]
 match = -266.7%%
