--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-08 17:30:29
+lastsearch = 2024-08-08 22:23:09
 
 [en.wikipedia.org]
-match = -31.2%%
-title = Gwangju Uprising
-url = https://en.wikipedia.org/wiki/Gwangju_Uprising
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
 match = 0.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=838ff984a601b7f8&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj34MGgmOWHAxWeGTQIHfPPCs0QsZYEegQIGhAC
+url = https://www.google.com/search?sca_esv=f2410e6d5c2185d0&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwis2K_V2eWHAxXSAHkGHb31B9wQsZYEegQIIhAC
 
 [produccionesitaca.es]
 match = -21.4%%
