CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-08 19:31:33
+lastsearch = 2024-08-08 22:41:14
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = 0.0%%
-title = Ho Chi Minh City
-url = https://en.wikipedia.org/wiki/Ho_Chi_Minh_City
+match = 17.4%%
+title = List of cities in Vietnam
+url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 
 [books.google.com]
 match = -43.5%%
@@ -57,8 +57,8 @@ title = Vietnam - Page 187 - Google Books Result
 url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrZh7UZM&sig=ACfU3U31CBiJ8h1DnTUPfxlmiUXnMLSJGg&hl=en&sa=X&ved=2ahUKEwjbhsjW69uHAxXXElkFHastO8MQ6AF6BAgjEAM
 
 [www.travelweekly.com]
-match = -56.5%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda
+match = -87.0%%
+title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
 url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
 
 [sonoivu.thaibinh.gov.vn]
@@ -357,8 +357,8 @@ title = Thai Binh Boston, MA - Last Updated June 2024
 url = https://m.yelp.com/search?find_desc=Thai+Binh&find_loc=Boston,+MA
 
 [ca.trip.com]
-match = -73.9%%
-title = Thai Binh Từ đường chi ba ngành nhì họ Nguyễn Trung ...
+match = -87.0%%
+title = Thai Binh Từ đường chi ba ngành nhì họ Nguyễn Trung Hotels
 url = https://ca.trip.com/hotels/thai-binh-t-ng-chi-ba-ngnh-nh-h-nguyn-trung/hotels-c61691m38407049/
 
 [www.worldbank.org]
