--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -92,9 +92,9 @@ title = Vỏ gối ôm Sông Hồng 38x100cm vải 100%% cotton
 url = https://songhong.info/vo-goi-om-song-hong-38x100-cotton
 
 [www.lazada.vn]
-match = -53.8%%
-title = Vỏ Gối Kẻ Caro Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/vo-goi-ke-caro/
+match = -38.5%%
+title = Vỏ Gối Kẻ Tím Giá Tốt T04/2024
+url = https://www.lazada.vn/tag/vo-goi-ke-tim/
 
 [flexhouse.vn]
 match = -207.7%%
