--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-08 20:44:32
+lastsearch = 2024-08-08 22:36:47
 
 [everon.online]
 match = -55.6%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/top-4-bo-chan-ga-goi-everon-mau-trang-dep
 [everonvn.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
-url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039?srsltid=AfmBOoqU2vtNgh7-iedGDro2GNORq_7WzGwB2ot4bmmGJ1pIgiyOjj4i
+url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,12 +24,12 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOoqMpcdjBtc7tcF8MYr3FGZ_StjrNgthBR-AxlHJm_37bXxcrrYc
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
-match = 18.5%%
-title = Bộ Chăn ga gối Everon EPM-21067
-url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
+match = 22.2%%
+title = Bộ chăn ga gối Everon EPM-21070
+url = https://everonhanquoc.vn/everon/12768/bo-chan-ga-goi-everon-epm-21070
 
 [everonhn.com.vn]
 match = 33.3%%
@@ -37,14 +37,14 @@ title = Bộ chăn ga Everon ESB -22020
 url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = 0.0%%
-title = Bộ Everon Ept-21045
-url = https://everon.net.vn/everon/2125/bo-everon-ept-21045
+match = 10.5%%
+title = Bộ Everon Epm-21071
+url = https://everon.net.vn/everon/2130/bo-everon-epm-21071
 
 [sieuthidemhanquoc.com.vn]
 match = 22.2%%
-title = Bộ chăn ga gối Everon EPM-21070
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21070-1529
+title = Bộ chăn ga gối Everon EPM-21060
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
 
 [shopee.vn]
 match = -70.4%%
