--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-08 17:36:23
+lastsearch = 2024-08-08 22:38:51
 
 [batdongsan.com.vn]
-match = -240.0%%
-title = Bán đất tại Đường Lý Chiêu Hoàng, Phường An Lạc, Quận Bình ...
-url = https://batdongsan.com.vn/ban-dat-duong-ly-chieu-hoang-phuong-an-lac-6/gia-tu-5-ty-den-7-ty-dt-tu-250m2-den-300m2
+match = -193.3%%
+title = Chung cư D2 Giảng Võ - Mua Bán Căn Hộ Chung Cư T8/ ...
+url = https://batdongsan.com.vn/ban-can-ho-chung-cu-chung-cu-d2-giang-vo
 
 [vinatools.com]
 match = -200.0%%
@@ -112,8 +112,8 @@ title = Chuông lắc cầm tay hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chuông lắc cầm tay
 
 [vishipel.com.vn]
-match = -226.7%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
+match = -260.0%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
