--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -212,9 +212,9 @@ title = Đề cử IR Awards 2024: 10 doanh nghiệp nhóm Mid Cap
 url = https://vietstock.vn/2024/08/de-cu-ir-awards-2024-10-doanh-nghiep-nhom-mid-cap-830-1217703.htm
 
 [www.lazada.vn]
-match = -168.8%%
-title = [HÀNG DÀY ĐẸP] Chiếu lác nhựa siêu bền chắc, dễ giặt ...
-url = https://www.lazada.vn/products/hang-day-dep-chieu-lac-nhua-sieu-ben-chac-de-giat-gap-gon-chieu-nhua-day-kich-thuoc-1m6x2m-hang-viet-nam-cao-cap_hcm-nemtot-bedding-i1775759368.html
+match = -131.2%%
+title = Chiếu Lác May Giá Tốt T08/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [vtcnews.vn]
 match = -193.8%%
