--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-08-08 20:34:31
+lastsearch = 2024-08-08 22:41:56
 
 [shopee.vn]
 match = 17.2%%
@@ -19,7 +19,7 @@ url = https://www.maihuyencorp.com/
 [www.lazada.vn]
 match = -13.8%%
 title = ☫❉♤ Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ ...
-url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html?srsltid=AfmBOoqNXBE0uA7oFONfFUay3JxKJhKxCbZ07xTIYWwjQ--ZKy9674ZQ
+url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html?srsltid=AfmBOorNR_96OLKJTWdEZ0kwbDc6e_bQOC6vrsENLcWj0VtvRkWqov7u
 
 [tiki.vn]
 match = -13.8%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 [www.facebook.com]
 match = 26.3%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
+url = https://www.facebook.com/chieunhuathailan/
 
 [www.sendo.vn]
 match = 24.1%%
