--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-08-08 20:24:20
+lastsearch = 2024-08-08 22:47:09
 
 [thegioidemviet.vn]
 match = 21.4%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/chieu-truc-p17.html
 [demxanh.com]
 match = -28.6%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopTiXMzcLva3RyEbKJ4DKhBpALNRCCPdMwwFdtPrXN_2qVtEy94
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = Chiếu trúc Quế Lâm loại 1 cao cấp ( loại có 2 mắt ngọc)
 url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-co-2-mat-ngoc-duo-c-kie-m-ha-ng-42210887-117572298.html
 
 [www.lazada.vn]
-match = 3.6%%
-title = Chiếu trúc hạt Quế Lâm loại 1, chiếu điều hoà cao cấp
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html
+match = 0.0%%
+title = Chiếu Trúc Hạt Quế Lâm hàng loại 1 tem xanh 1m2, 1m5 ...
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-hang-loai-1-tem-xanh-1m2-1m5-1m6-i732230394.html?srsltid=AfmBOorYmDe5T4Y7TYhhp2IAPuB-5OVHsmiPJPjd6aMT0erIXPk4ORvi
 
 [thegioidemonline.com]
 match = -39.3%%
