--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-08 20:34:31
+lastsearch = 2024-08-08 22:32:09
 
 [dongagroup.vn]
 match = -272.7%%
@@ -27,9 +27,9 @@ title = Giuonggaphoaphat.com
 url = http://giuonggaphoaphat.com/
 
 [tunhuamiennam.com]
-match = -245.5%%
-title = giường liền tủ nhựa cứng ecoplast cao cấp gec31
-url = https://tunhuamiennam.com/san-pham/giuong-lien-tu-nhua-cung-ecoplast-cao-cap-gec30-2/
+match = -172.7%%
+title = giường nhựa cứng ecoplast cao cấp gec60
+url = https://tunhuamiennam.com/san-pham/giuong-nhua-cung-ecoplast-cao-cap-gec60-2/
 
 [giuongtang.mov.mn]
 match = -200.0%%
@@ -62,8 +62,8 @@ title = Giường bọc nệm HELEN 2
 url = https://ifurni.vn/san-pham/giuong-eda-1564.html
 
 [shopee.vn]
-match = -290.9%%
-title = Kệ Gỗ Đầu Giường Kệ 2 Tầng Đa Năng Trang Trí Nhà ...
+match = -327.3%%
+title = Kệ Gỗ Đầu Giường Kệ 2 Tầng Đa Năng Trang Trí Nhà Cửa ...
 url = https://shopee.vn/Kệ-Gỗ-Đầu-Giường-Kệ-2-Tầng-Đa-Năng-Trang-Trí-Nhà-Cửa-Phong-Cách-Hiện-Đại-MN-65-i.414104565.22942150984
 
 [3dwarehouse.sketchup.com]
@@ -107,8 +107,8 @@ title = Zinus: Shop Mattresses, Bed Frames & Sofas
 url = https://www.zinus.com/
 
 [pamed.com.vn]
-match = -409.1%%
-title = MN-G2CN - Giường 2 chức năng | Pamed – Trang thiết bị, vật tư y tế
+match = -145.5%%
+title = MN-G2CN - Giường 2 chức năng - Pamed
 url = https://pamed.com.vn/mn-g2cn-giuong-2-chuc-nang
 
 [www.nitrc.org]
