--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-08-08 21:46:03
+lastsearch = 2024-08-08 22:44:02
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -64,7 +64,7 @@ url = https://www.khanbongcaocap.com.vn/tham-chui-chan-khach-san
 [www.lazada.vn]
 match = -20.8%%
 title = THẢM CHÙI CHÂN NỈ CỠ LỚN KT 1,2m*1,8m Lau ...
-url = https://www.lazada.vn/products/tham-chui-chan-ni-co-lon-kt-12m18m-lau-chan-soi-len-de-cao-su-chong-tron-truot-dung-cho-sanh-van-phong-toa-nha-khach-san-hien-dai-sang-trong-tham-trai-san-tham-tri-tai-i1910157563.html
+url = https://www.lazada.vn/products/tham-chui-chan-ni-co-lon-kt-12m18m-lau-chan-soi-len-de-cao-su-chong-tron-truot-dung-cho-sanh-van-phong-toa-nha-khach-san-hien-dai-sang-trong-tham-trai-san-tham-tri-tai-i1910157563.html?srsltid=AfmBOoo52wAGw2b-sprflED1f5-eGL3_DXRAgwwK2RIvPKCsHTAOwcVR
 
 [h5.lazada.vn]
 match = -20.8%%
@@ -84,7 +84,7 @@ url = https://sieuthidienmaypico.com/tham-chui-chan-ariel-mau-xanh-nti272043734.
 [jysk.vn]
 match = -62.5%%
 title = Thảm Chùi Chân Trải Cửa Ra Vào Đẹp, Nhiều Mẫu - JYSK.vn
-url = https://jysk.vn/tham-trai-cua
+url = https://jysk.vn/tham-trai-cua?srsltid=AfmBOoqSOAvhBSw3wQSgEy27RqHkDPF_FtcFdL9JA58sukF_QFvzU46A
 
 [shouse.vn]
 match = -50.0%%
