CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -152,9 +152,9 @@ title = Locations
 url = https://www.coherent.com/company/locations
 
 [www.scribd.com]
-match = -26.1%%
-title = LIVE CHỮA ĐỀ CHÍNH THỨC VÀO 10 THÁI BÌNH 2023 (1)
-url = https://www.scribd.com/document/728957004/LIVE-CHU-A-ĐE-CHI-NH-THU-C-VA-O-10-THA-I-BI-NH-2023-1
+match = -17.4%%
+title = De, ĐÁP ÁN TIẾNG ANH LỚP 10 - Thái Bình
+url = https://www.scribd.com/document/582410268/De-ĐA-P-A-N-TIE-NG-ANH-LO-P-10-Tha-i-Bi-nh
 
 [anthrosource.onlinelibrary.wiley.com]
 match = -130.4%%
