--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-08 20:55:09
+lastsearch = 2024-08-08 22:58:44
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOoptrxZIkODYPWAfDkD-rd6vkDXNH4G9AwDURMTAekTykG0d4n7n
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -88.9%%
-title = Chuchu Shop - 𝐍𝐄𝐌 𝐂𝐇𝐔𝐀 𝐕𝐈𝐄̂𝐍 𝐌𝐈𝐍𝐈 𝐎̛́𝐓 𝐗𝐈𝐄̂𝐌 ...
-url = https://www.facebook.com/story.php/?story_fbid=883178550515220&id=100064692486421
+match = -5.6%%
+title = Nem Nướng Mỗ Lao - Hà Đông
+url = https://www.facebook.com/story.php/?story_fbid=767320398760395&id=100064473260604
 
 [thegioinem.com]
 match = -55.6%%
@@ -54,7 +54,7 @@ url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOor1p43TNDCbnD1dhUA1Wl2w-jmnckxqaag1trGVmQBc2Os8ldod
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
 match = -133.3%%
