--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-08-08 22:21:03
+lastsearch = 2024-08-08 22:53:09
 
 [shopee.vn]
-match = -76.2%%
-title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường loại 1
+match = -123.8%%
+title = Giường Bumper Bed Bảo Vệ Bé Yêu An Toàn Yên Tâm Vui ...
+url = https://shopee.vn/Giường-Bumper-Bed-Bảo-Vệ-Bé-Yêu-An-Toàn-Yên-Tâm-Vui-Chơi-Phát-Triển-Thương-hiệu-Dono-Dono-Hàn-Quốc-i.739965304.21859208735
 
 [cafeland.vn]
 match = -100.0%%
@@ -97,9 +97,9 @@ title = Thảm trải giường Fila - Đà Nẵng
 url = https://suongtuyet.com/tham-trai-giuong-fila
 
 [noithatcaco.vn]
-match = -95.2%%
-title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+match = -123.8%%
+title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
+url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
 
 [unmei.com.vn]
 match = -100.0%%
@@ -200,4 +200,9 @@ url = https://noithatduongdong.com/giuong-sat-2-tang-mau-ghi-gt-12
 match = 17.6%%
 title = giường twils sail
 url = https://muanhanhvatlieuxaydung.ritavo.com/products/giuong-twils-sail-2
+
+[noithatinoxhoaphat.vn]
+match = -100.0%%
+title = Giường tầng sắt Bộ Đội BĐ01 - Nội Thất Inox Hòa Phát
+url = https://noithatinoxhoaphat.vn/giuong-tang-sat-bo-doi-bd01/
 
