--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -17,9 +17,9 @@ title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
 url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
 
 [tongdailyeveron.com.vn]
-match = -5.3%%
-title = Bộ Chăn Ga Giảm Giá
-url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
+match = 29.6%%
+title = Bộ ga phủ 180*200 EPM 20069
+url = https://tongdailyeveron.com.vn/products/bo-ga-phu-180-200-epm20069
 
 [demxanh.com]
 match = -7.4%%
