--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-08 22:26:36
+lastsearch = 2024-08-08 22:57:20
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg
 [www.lazada.vn]
 match = 3.7%%
 title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/?srsltid=AfmBOoppECBj0ipmYtWJg9arLr-4qVCsb8YY-OIpChXy8f4I6QR9PoAk
+url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
 
 [tiki.vn]
 match = 11.1%%
@@ -64,7 +64,7 @@ url = https://betuti.vn/chan-long-tuyet
 [www.diepxuan.com]
 match = 22.2%%
 title = Chăn tuyết Thái Lan 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-tuyet-thai-lan-5kg.html?srsltid=AfmBOoplxNddUkkVhoCtAQxI0TMbELbpO0Nycqwkdae7Wc5QrpvgI5FM
+url = https://www.diepxuan.com/chan-tuyet-thai-lan-5kg.html
 
 [vn.biggo.com]
 match = -29.6%%
@@ -164,7 +164,7 @@ url = https://stockbiz.vn/tin-tuc/ha-noi-huong-toi-xuat-khau-thuy-san/26441575
 [metric.vn]
 match = -48.1%%
 title = Báo cáo thị trường Chăn lông tuyết 5kg dành cho doanh ...
-url = https://metric.vn/chan-long-tuyet-5kg?srsltid=AfmBOorA09Ew_HYT3ro887KQdq0WEsYHH9ncHeJqGCjxyg2Vi1isFt1Z
+url = https://metric.vn/chan-long-tuyet-5kg
 
 [ts.udn.vn]
 match = -10.0%%
