--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-08-08 21:18:55
+lastsearch = 2024-08-08 22:59:49
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOor7guNH1ciNjQWSpNmUy5jBi60dL00EzZi5-ByuCQ9OXputdTVJ
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hòa
 [demviethome.vn]
 match = 14.8%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOoqysML4FxsXwIAmnBb-9r5IQ2pXQ9sXY2vP2bo1hESu31F_kvzO
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
 
 [lybalansieucute.com]
 match = 37.0%%
