--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-08 14:03:30
+lastsearch = 2024-08-08 23:00:31
 
 [shopee.vn]
 match = 14.3%%
@@ -27,9 +27,9 @@ title = Sử dụng chiếu điều hòa có tốt hay không?
 url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
-match = 28.6%%
-title = Chiếu điều hòa có mát không? Review 10 ...
-url = https://tiki.vn/blog/chieu-dieu-hoa/
+match = 10.7%%
+title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu lụa điều hòa
 
 [sieuthidem.vn]
 match = 32.1%%
@@ -47,9 +47,9 @@ title = Chiếu điều hòa là gì? Có nên dùng chiếu điều hòa?
 url = https://happynest.vn/chuyen-nha/100072743/chieu-dieu-hoa-la-gi-co-nen-dung-chieu-dieu-hoa
 
 [khodem.vn]
-match = -10.7%%
-title = CHIẾU ĐIỀU HÒA LOẠI NÀO TỐT? 3 LOẠI PHỔ BIẾN - Kho đệm
-url = https://khodem.vn/chieu-dieu-hoa-loai-nao-tot-3-loai-pho-bien/
+match = 14.3%%
+title = CHIẾU ĐIỀU HÒA TENCEL NHẬT BẢN CHÍNH HÃNG 100%%
+url = https://khodem.vn/chieu-dieu-hoa-tencel-nhat-ban-chinh-hang-100/
 
 [foreverbedding.net]
 match = -3.6%%
