--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-08-08 20:25:43
+lastsearch = 2024-08-08 22:51:44
 
 [anlacphat.com]
 match = -118.8%%
@@ -12,9 +12,9 @@ title = Đèn Led Chiếu Điểm Thanh Ray DIA808 7W Duhal
 url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia808-7w-duhal/
 
 [thacoanlac.vn]
-match = -180.0%%
-title = FD990
-url = https://thacoanlac.vn/forland-fd900
+match = -133.3%%
+title = FD700B
+url = https://thacoanlac.vn/forland-fd700b
 
 [vietnamese.alibaba.com]
 match = -150.0%%
@@ -49,7 +49,7 @@ url = https://qtetech.com/hop-chong-tinh-dien
 [www.lazada.vn]
 match = -137.5%%
 title = Chiếu Lác May Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-lac-may/?srsltid=AfmBOor9KJZGH2dafNfohMKBrz1PYijo2aRGl66Ajy8JzmrC_xC0yZyv
+url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [vi.made-in-china.com]
 match = -100.0%%
