--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-08-08 22:18:16
+lastsearch = 2024-08-08 22:50:21
 
 [demxanh.com]
 match = -94.1%%
 title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
-url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html?srsltid=AfmBOooajQbXuvbWZRro7A5ZO-x5iAr6DZT3XKuJ2cdR9yClsjxtUd3a
+url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
 
 [chieutrelanlan.com]
-match = -100.0%%
-title = Chiếu trúc mắt nhỏ có viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-160x190cm-33.html
+match = -76.5%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 120x190cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-120x190cm-29.html
 
 [thegioidemtot.vn]
 match = -58.8%%
@@ -37,9 +37,9 @@ title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
 url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
 
 [vongxepsaigon.vn]
-match = 47.1%%
-title = chiếu trúc hạt nâu đen
-url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
+match = -129.4%%
+title = Chiếu trúc chiếu tre 120cm hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-120cm-hat-nau-den-hang-tot-loai-1/
 
 [www.diepxuan.com]
 match = -64.7%%
