--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-08 21:53:52
+lastsearch = 2024-08-08 22:53:30
 
 [demxanh.com]
 match = -42.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html?srsltid=AfmBOorapv-S2M2EpDB_Xp2VfplBSh5XXyuxnsUq9EQFMxAPk4DhR5RM
 
 [www.diepxuan.com]
 match = 35.7%%
 title = Ga chun EPCARLESS 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html?srsltid=AfmBOoqAQO5ayZ3tFXhqCi7GlQEb64aw_LgKsNCDEN3H6CES9a_-Ylyr
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -199,7 +199,7 @@ url = http://rainocup.com/index3.php?name=https://xn--b1axgco2a.xn--p1ai/8264395
 [diepxuan.com]
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/
+url = https://diepxuan.com/?srsltid=AfmBOooYXQ6WX2T1Ngcr6mhjQBUsiyNVLtQygmzrFG6l6mqW_umrCvQs
 
 [www.tripadvisor.com]
 match = -50.0%%
