--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-08-08 21:51:41
+lastsearch = 2024-08-08 22:45:29
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -12,9 +12,9 @@ title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
 url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [everonkorea.com]
-match = 31.8%%
-title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
-url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
+match = 23.4%%
+title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
+url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
 
 [demxanh.com]
 match = 27.9%%
@@ -33,8 +33,8 @@ url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [www.diepxuan.com]
 match = 36.2%%
-title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
+title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
 match = 57.4%%
