--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-08-08 22:30:04
+lastsearch = 2024-08-08 22:52:47
 
 [erado.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Giường ngủ da hạng sang mã 18
 url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
 
 [shopee.vn]
-match = -105.0%%
-title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường xếp
+match = -100.0%%
+title = FASHYUNER 18 Chiếc Kẹp Ga Trải Giường, Chống Trơn ...
+url = https://shopee.vn/FASHYUNER-18-Chiếc-Kẹp-Ga-Trải-Giường-Chống-Trơn-Trượt-Xanh-Hồng-Trong-Suốt-Khăn-Trải-Giường-Kẹp-Thẩm-Mỹ-Làm-Vui-Vẻ-Hai-Tốc-Độ-Nhựa-Điều-Chỉnh-Ga-Trải-Giường-Chống-Trượt-Thiết-Bị-Cố-Định-Quilt-i.104597786.25227027868
 
 [h5.lazada.vn]
 match = -5.0%%
