--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-08-08 21:37:23
+lastsearch = 2024-08-08 22:47:35
 
 [shopee.vn]
-match = -109.5%%
-title = Giường Gỗ GOLDCAT Cho Trẻ Từ 2-15 Tuổi Phong Cách ...
-url = https://shopee.vn/Giường-Gỗ-GOLDCAT-Cho-Trẻ-Từ-2-15-Tuổi-Phong-Cách-Hàn-Quốc-Trọng-Tải-Tối-Đa-180kg-Gỗ-Quế-An-Toàn-i.37391376.20738001993
+match = -52.4%%
+title = thảm trải giường giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -23,8 +23,8 @@ url = https://www.sendo.vn/tham-chan-giuong.htm
 
 [tiki.vn]
 match = -38.1%%
-title = Thảm trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải giường
+title = Tham trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=tham trải giường
 
 [flexhouse.vn]
 match = -42.9%%
