--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-08 18:32:41
+lastsearch = 2024-08-08 23:21:25
 
 [silverwow.net]
 match = -255.6%%
@@ -219,7 +219,7 @@ url = https://www.itshot.com/jewelry/education-guides/strongest-chains
 [mightydepot.com]
 match = -377.8%%
 title = Chung John Wong Sun Chan pepper 3kg Korean food ...
-url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_
+url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_?srsltid=AfmBOooe661l-SOOo6CpoQGRKUvabkr954PLCkrAhdpOXHXGKupMKLSh
 
 [s.click.aliexpress.com]
 match = -444.4%%
