--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-08 15:39:30
+lastsearch = 2024-08-08 23:23:29
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -76.5%%
-title = xikers Members Profile (Updated!)
-url = https://kprofiles.com/xikers-members-profile/
+match = -70.6%%
+title = ATEEZ Members Profile (Updated!)
+url = https://kprofiles.com/ateez-members-profile/
 
 [www.qsc.com]
 match = -188.2%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -223.5%%
-title = Translational strategies for neuroprotection in ischemic stroke
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
+match = -200.0%%
+title = Discovery of a novel third-generation EGFR inhibitor and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
 match = -200.0%%
