--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-08 22:25:54
+lastsearch = 2024-08-08 23:16:33
 
 [tiki.vn]
 match = -133.3%%
@@ -12,9 +12,9 @@ title = Mua Chăn lông cừu 2 lớp loại dày cho bé nhiều mẫu
 url = https://tiki.vn/chan-long-cuu-2-lop-loai-day-cho-be-nhieu-mau-size-1m4-x-1m-sieu-am-p69905522.html?spid=72012337/
 
 [joliefam.vn]
-match = -140.0%%
-title = Chăn cừu pháp Joliefam - Tổng hợp các mẫu màu đẹp
-url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
+match = -13.3%%
+title = Chăn cừu pháp Joliefam ghi tối
+url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
 
 [www.lazada.vn]
 match = -166.7%%
