--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-08-08 20:27:28
+lastsearch = 2024-08-08 23:31:47
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [shopee.vn]
-match = 3.0%%
-title = Chiếu trúc hạt đen không viền (hàng VN cao cấp loại 1, BH ...
-url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-(hàng-VN-cao-cấp-loại-1-BH-1-năm)-i.76806530.1285760215
+match = 0.0%%
+title = chiếu trúc cao cấp giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc cao cấp
 
 [vongxepsaigon.vn]
 match = 27.3%%
