--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-08 20:30:41
+lastsearch = 2024-08-08 23:20:03
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -111.8%%
-title = I need advice #lawyer #hoa #taylorswift | hoa
-url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
+match = -170.6%%
+title = Defund the HOA... . . . #HOA #DefundTheHOA #Neighborhood
+url = https://www.tiktok.com/@dudedad/video/7354147793197354283
 
 [www.21alivenews.com]
 match = -123.5%%
@@ -617,8 +617,8 @@ title = Home | CI D8
 url = https://www.dora.colorado.gov/
 
 [www.ag.idaho.gov]
-match = 0.0%%
-title = 
+match = -29.4%%
+title = Idaho Open Meeting Law Manual
 url = https://www.ag.idaho.gov/content/uploads/2018/04/OpenMeeting.pdf
 
 [www.michigan.gov]
@@ -675,4 +675,9 @@ url = https://blog.houze.vn/blog/hoa-chung-trong-nha-ngay-tet-dep-de-trong-thu-h
 match = -129.4%%
 title = 101+ hình nền hoa đẹp nhất cho điện thoại, máy tính
 url = https://cellphones.com.vn/sforum/hinh-nen-hoa
+
+[www.polksheriff.org]
+match = -135.3%%
+title = Polk County Sheriff's Office: Sheriff Grady Judd
+url = https://www.polksheriff.org/
 
