--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-08-08 22:44:02
+lastsearch = 2024-08-08 23:32:08
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Thảm chân len xù 1 50x80
 url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 
 [tiki.vn]
-match = -41.7%%
-title = Tham chui chan 60x80 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=tham chui chan 60x80
+match = -70.8%%
+title = Thảm lót chân hàng chính hãng, giao nhanh - Tháng 8, 2024
+url = https://tiki.vn/search?q=thảm lót chân
 
 [shopee.vn]
-match = -58.3%%
-title = Thảm nhựa rối lau chân Welcome - LOẠI 1 KT 1.2X1.5, ...
-url = https://shopee.vn/Thảm-nhựa-rối-lau-chân-Welcome-LOẠI-1-KT-1.2X1.5-1.2X1.8-i.33873765.3832805419
+match = -41.7%%
+title = Thảm chùi chân chữ HOME cỡ 50x80, thấm hút phong ...
+url = https://shopee.vn/Thảm-chùi-chân-chữ-HOME-cỡ-50x80-thấm-hút-phong-cách-Nhật-Bản-i.66569981.10269870886
 
 [lepetit.com.vn]
 match = -79.2%%
@@ -84,7 +84,7 @@ url = https://sieuthidienmaypico.com/tham-chui-chan-ariel-mau-xanh-nti272043734.
 [jysk.vn]
 match = -62.5%%
 title = Thảm Chùi Chân Trải Cửa Ra Vào Đẹp, Nhiều Mẫu - JYSK.vn
-url = https://jysk.vn/tham-trai-cua?srsltid=AfmBOoqSOAvhBSw3wQSgEy27RqHkDPF_FtcFdL9JA58sukF_QFvzU46A
+url = https://jysk.vn/tham-trai-cua
 
 [shouse.vn]
 match = -50.0%%
