--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-08 18:45:20
+lastsearch = 2024-08-08 23:20:43
 
 [bilystore.vn]
 match = -81.0%%
 title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na14/?srsltid=AfmBOoqzeKC05bWnB1OXnVdKspvjVhTsKAv5RKG1NAWuqOWe-7mlG0Ic
+url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
 match = -33.3%%
 title = Thảm lông cừu trải giường, thảm nỉ nhung ...
-url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-hoạt-tiết-Chất-Liệu-Bông-Trắng-BẢO-HÀNH-1-NĂM-i.464791988.12332594857
+url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-thảm-nhung-đa-năng-thảm-trải-giường-3-lớp-loại-1-i.267488477.15016298625
 
 [tiki.vn]
 match = -38.1%%
@@ -144,7 +144,7 @@ url = https://decor.lanha.vn/san-pham/giuong-boc-nem-lnd-14/
 [ninhouse.vn]
 match = -42.9%%
 title = Giá drap trải giường | Bộ chăn ga gối đệm ...
-url = https://ninhouse.vn/collections/drap?srsltid=AfmBOoqW-ckE7jL_3p6jSxBgPpWk7_fTYFksFi_GVPAKCF6KH1Y0dg0m
+url = https://ninhouse.vn/collections/drap
 
 [noithattamviet.net]
 match = -81.0%%
