--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-08 19:39:32
+lastsearch = 2024-08-08 23:30:47
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,14 +17,14 @@ title = The 5th edition of the World Health Organization ...
 url = https://pubmed.ncbi.nlm.nih.gov/35732829/
 
 [www.dir.ca.gov]
-match = -21.1%%
-title = ADDITIONAL CASE INFORMATION
-url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
+match = -126.3%%
+title = Workers' Compensation Appeals Board - Panel decisions
+url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = 5.3%%
-title = Margaret Tempero, MD
-url = https://profiles.ucsf.edu/margaret.tempero
+match = 15.8%%
+title = Li Zhang - UCSF Profiles
+url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
 match = -152.6%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -21.1%%
-title = Karen Messer | UCSD Profiles
-url = https://profiles.ucsd.edu/karen.messer
+match = -10.5%%
+title = Gary Vilke | UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [medboard.nv.gov]
 match = -136.8%%
