CI images update

--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-08 20:01:58
+lastsearch = 2024-08-08 23:37:15
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -87,9 +87,9 @@ title = Bảo vệ đê, kè mùa mưa, lũ
 url = https://baohungyen.vn/bao-ve-de-ke-mua-mua-lu-3172981.html
 
 [baotainguyenmoitruong.vn]
-match = -104.8%%
-title = Những “chiến sĩ” áo xanh giúp người dân chuyển đổi xanh
-url = https://baotainguyenmoitruong.vn/nhung-chien-si-ao-xanh-giup-nguoi-dan-chuyen-doi-xanh-377802.html
+match = -114.3%%
+title = Cho Trường Sa xanh mãi ngàn sau - Bài 3: Nhà màng ở ...
+url = https://baotainguyenmoitruong.vn/cho-truong-sa-xanh-mai-ngan-sau-bai-3-nha-mang-o-an-bang-tien-nu-378029.html
 
 [trithucvn.co]
 match = -33.3%%
@@ -277,9 +277,9 @@ title = Mức đóng bảo hiểm xã hội của công chức thay đổi thế
 url = https://bptv.vn/news/9/159224/muc-dong-bao-hiem-xa-hoi-cua-cong-chuc-thay-doi-the-nao-khi-luong-co-so-du-kien-tang-30
 
 [m.facebook.com]
-match = -95.2%%
-title = casual Đà nẵng | KHÁCH SẠN SEL DE MER HOTEL & ...
-url = https://m.facebook.com/groups/303223456724518/posts/2101917873521725/
+match = -152.4%%
+title = "Những học trò của tôi đã động viên tôi ra tranh cử. Họ thấy ...
+url = https://m.facebook.com/datvietdotcom/photos/ngày-6-8-ứng-viên-tổng-thống-mỹ-của-đảng-dân-chủ-kamala-harris-đã-có-lần-đầu-tiê/812940147629577/
 
 [thuvienphapluat.vn]
 match = -109.5%%
@@ -597,9 +597,9 @@ title = Khối Mô Hậu Trực U Môn Tả Tràng
 url = https://veteris.it/7740937-khối-tả-hậu-u-trực-môn-tràng-mô.html
 
 [hdgmvietnam.com]
-match = -66.7%%
-title = Bài 134 - Đôi điều về mầu nhiệm Chúa Ba Ngôi
-url = https://hdgmvietnam.com/chi-tiet/giai-dap-thac-mac-cho-nguoi-tre-bai-133---doi-dieu-ve-mau-nhiem-chua-ba-ngoi
+match = -42.9%%
+title = Giải đáp thắc mắc cho người trẻ: Bài 135
+url = https://hdgmvietnam.com/chi-tiet/giai-dap-thac-mac-cho-nguoi-tre-bai-135---hanh-huong-la-cach-cau-nguyen-dac-biet
 
 [en.theorychina.org.cn]
 match = -61.9%%
@@ -632,9 +632,9 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = 0.0%%
-title = Sự phát triển của thai nhi tuần 4
-url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-4-vi
+match = -57.1%%
+title = Tìm hiểu sự phát triển của thai nhi 21 tuần tuổi
+url = https://www.vinmec.com/vie/bai-viet/tim-hieu-su-phat-trien-cua-thai-nhi-21-tuan-tuoi-vi
 
 [www.hcmcpv.org.vn]
 match = -104.8%%
