--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-08 20:07:34
+lastsearch = 2024-08-08 23:51:40
 
 [burningman.org]
 match = -60.0%%
@@ -12,9 +12,9 @@ title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
-match = -233.3%%
-title = Tony Robbins: STOP Wasting Your LIFE! (Change Everything ...
-url = https://www.youtube.com/watch?v=O9F19ban7A4
+match = 0.0%%
+title = Primitive Technology
+url = https://www.youtube.com/@primitivetechnology9550
 
 [www.hcso.org]
 match = 7.7%%
