--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-08 20:31:20
+lastsearch = 2024-08-08 23:40:02
 
 [www.instagram.com]
-match = -33.3%%
-title = Instagram
-url = https://www.instagram.com/radii_media/p/C4ft1kFvyln/
+match = -184.6%%
+title = The Hong Kong table tennis duo, Hoi Kem Doo ...
+url = https://www.instagram.com/prestigehk/p/C9-ObIzyMuI/?locale=en_US,en_GB,en_US,en_GB&hl=am-et
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -32,9 +32,9 @@ title = Podcasts
 url = https://www.linklaters.com/en-us/knowledge/podcasts
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Lucie_Daouphars
+match = -11.1%%
+title = Fiona Sit
+url = https://en.wikipedia.org/wiki/Fiona_Sit
 
 [press.fourseasons.com]
 match = -269.2%%
@@ -224,7 +224,7 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 [shopee.vn]
 match = -176.9%%
 title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
 
 [hongkongfp.com]
 match = -269.2%%
