--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-08 21:16:28
+lastsearch = 2024-08-08 23:50:57
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOorQBJ7PDbF2aWeaMLE3u9aloHy6UyQSoknqdUWaQAef00QaABqc
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
 match = -6.7%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -146.7%%
-title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
+match = -106.7%%
+title = Đèn Led mắt ếch HT 8091 14W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/me91-14-t-v-tt-ht-light-level
 
 [www.facebook.com]
 match = -186.7%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 7W HT Light Level
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -113.3%%
-title = Bội thu trái ngọt trên sân thượng | VTC16
-url = https://www.youtube.com/watch?v=BczGFg9KXOk
+match = -186.7%%
+title = RA MẮT MV "RỰC RỠ VIỆT NAM" - CA KHÚC CHỦ ĐỀ CỦA ...
+url = https://www.youtube.com/watch?v=HRWJodbvL9g
 
 [dauthau.asia]
 match = -240.0%%
