--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-08 20:01:37
+lastsearch = 2024-08-08 23:35:49
 
 [hoa18.com]
-match = -173.7%%
-title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài lộc trong ...
+match = -126.3%%
+title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài ...
 url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
 
 [www.youtube.com]
-match = -157.9%%
-title = Kinh Diệu Pháp Liên Hoa 18 - TT. Thích Tuệ Hải - Chùa Long ...
-url = https://www.youtube.com/watch?v=-X8Kxi6LbsI
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
@@ -132,9 +132,9 @@ title =
 url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam-nu-tam-xuan-trang-tri-tet-dep-sang-trong-1406607
 
 [shopee.vn]
-match = -84.2%%
-title = cây phú quý giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=cây phú quý
+match = -121.1%%
+title = Nhang nở hoa - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/nhang/nở hoa
 
 [baobinhdinh.vn]
 match = -110.5%%
