--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-08-08 23:28:43
+lastsearch = 2024-08-08 23:52:01
 
 [demtot.com]
 match = -44.4%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-
 [demxanh.com]
 match = -109.5%%
 title = Top 10 loại nệm lò xo liên kết chất lượng và bán chạy nhất!
-url = https://demxanh.com/top-10-loai-nem-lo-xo-lien-ket-chat-luong-va-ban-chay-nhat.html?srsltid=AfmBOoqCzdF76HuhziNsSbfMY4Mv6sTM2vYzpfDx4DrpVON1KDOlGE6f
+url = https://demxanh.com/top-10-loai-nem-lo-xo-lien-ket-chat-luong-va-ban-chay-nhat.html
 
 [maybedding.vn]
 match = 38.9%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -119.0%%
-title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
-url = https://lombom.com/dem-lo-xo/
+match = -133.3%%
+title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
+url = https://lombom.com/dem-nem/page/2/
 
 [www.linkedin.com]
 match = 4.8%%
