--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-08 18:46:24
+lastsearch = 2024-08-08 23:45:43
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke | UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = 5.9%%
+title = Michael Rosenfeld
+url = https://profiles.ucsd.edu/michael.rosenfeld
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -87,9 +87,9 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -170.0%%
-title = Kurt Stenmark, MD Professor, Pediatrics-Critical Care Medicine
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/15570
+match = -150.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [www.dir.ca.gov]
 match = -28.6%%
