CI images update

--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-08 23:34:46
+lastsearch = 2024-08-09 00:21:49
 
 [chieutruc.info]
-match = -100.0%%
-title = Bảng giá chiếu cói Xuân Hòa xuất khẩu - hàng Việt Nam cao ...
-url = https://chieutruc.info/chieu-coi-xuan-hoa/
+match = -63.6%%
+title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
+url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 
 [tiki.vn]
 match = -36.4%%
@@ -22,29 +22,29 @@ title = CAPCUT VIỆT NAM | Mn ơi giúp e vs
 url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 
 [nhathuoclongchau.com.vn]
-match = -109.1%%
-title = Bảng chiều cao cân nặng của trẻ 0-18 tuổi chuẩn nhất theo ...
-url = https://nhathuoclongchau.com.vn/bai-viet/bang-chieu-cao-can-nang-cua-tre-0-18-tuoi-chuan-nhat-theo-who-63600.html
+match = -104.5%%
+title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
+url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
 
 [www.vinmec.com]
-match = -18.2%%
-title = Các chỉ số trong kết quả siêu âm thai
-url = https://www.vinmec.com/vie/bai-viet/cac-chi-so-trong-ket-qua-sieu-am-thai-vi
+match = 4.5%%
+title = Sự phát triển của thai nhi tuần 18
+url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-18-vi
 
 [www.youtube.com]
-match = 9.5%%
-title = Trực Tiếp Bóng Chuyền
-url = https://www.youtube.com/channel/UCitq3mixAs4qZX-4RX1OEtA
+match = -109.1%%
+title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng ...
+url = https://www.youtube.com/watch?v=uPDPr__M7aI
 
 [www.facebook.com]
-match = 40.9%%
-title = Chiếu Cói Cao Cấp Nga Sơn
-url = https://www.facebook.com/chieucoiviettrang/
+match = 36.4%%
+title = Chiếu Cói Thái Bình | Hanoi
+url = https://www.facebook.com/ChieucoiThaiBinh102/?locale=vi_VN
 
 [medlatec.vn]
-match = -50.0%%
-title = Các chỉ số thai nhi và những điều mẹ cần biết
-url = https://medlatec.vn/tin-tuc/cac-chi-so-thai-nhi-va-nhung-dieu-me-can-biet-s195-n19747
+match = -109.1%%
+title = Sự phát triển của thai 18 tuần và những thay đổi trên cơ ...
+url = https://medlatec.vn/tin-tuc/su-phat-trien-cua-thai-18-tuan-va-nhung-thay-doi-tren-co-the-thai-phu-s74-n28778
 
 [www.lazada.vn]
 match = -40.9%%
