--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-08 21:44:26
+lastsearch = 2024-08-09 00:13:51
 
 [tiki.vn]
-match = -122.2%%
-title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
+match = -138.9%%
+title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-la-160-x-200-cm-p7855499.html
 
 [nemxinh.net]
 match = 50.0%%
