--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-08 20:27:06
+lastsearch = 2024-08-09 00:12:05
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -457,9 +457,9 @@ title = Tử vi ngày 16/7/2024 của 12 cung hoàng đạo
 url = https://kinhtedothi.vn/tu-vi-ngay-16-7-2024-cua-12-cung-hoang-dao-ma-ket-dung-lo-la.html
 
 [baoangiang.com.vn]
-match = -193.8%%
-title = Bế mạc Hội nghị lần thứ 16 Ban Chấp hành Đảng bộ tỉnh ...
-url = https://baoangiang.com.vn/be-mac-hoi-nghi-lan-thu-16-ban-chap-hanh-dang-bo-tinh-an-giang-a400231.html
+match = 0.0%%
+title = 
+url = https://baoangiang.com.vn/co-tay-16cm-deo-dong-ho-size-bao-nhieu-goi-y-5-mau-phu-hop-a387071.html
 
 [www.baosoctrang.org.vn]
 match = -175.0%%
