CI images update

--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-08-08 23:40:46
+lastsearch = 2024-08-09 01:22:25
 
 [anlacphat.com]
 match = -118.8%%
@@ -49,7 +49,7 @@ url = https://qtetech.com/hop-chong-tinh-dien
 [www.lazada.vn]
 match = -200.0%%
 title = Gương một chiều tấm dán Cửa Sổ Màu Vinyl kính tự dính ...
-url = https://www.lazada.vn/products/guong-mot-chieu-tam-dan-cua-so-mau-vinyl-kinh-tu-dinh-phim-cach-nhiet-nang-luong-mat-troi-cua-so-chong-choi-su-rieng-tu-cho-nha-i2421194868.html
+url = https://www.lazada.vn/products/guong-mot-chieu-tam-dan-cua-so-mau-vinyl-kinh-tu-dinh-phim-cach-nhiet-nang-luong-mat-troi-cua-so-chong-choi-su-rieng-tu-cho-nha-i2421194868.html?srsltid=AfmBOoqMGN3m2BZY070XgelBV1LpGCRMekCj9ieyL3-CQtB1VlIglYT9
 
 [vi.made-in-china.com]
 match = -100.0%%
@@ -59,7 +59,7 @@ url = https://vi.made-in-china.com/co_ti-care/product_Medical-100-Cotton-Pillow-
 [www.diepxuan.com]
 match = -68.8%%
 title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html?srsltid=AfmBOoqIvghPAPofg3xXznofvEriubAlMNTw5PRuDIOZW322ndkwJj97
 
 [www.thietbihiepphat.com]
 match = -43.8%%
