--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-09 00:20:26
+lastsearch = 2024-08-09 01:23:07
 
 [everon.online]
 match = 15.4%%
@@ -77,9 +77,9 @@ title = Tiết kiệm đến 75%% khi mua Anno 2070™ trên Steam
 url = https://store.steampowered.com/app/48240?l=vietnamese&curator_clanid=33358846
 
 [vi.wikipedia.org]
-match = -3.8%%
-title = San Diego – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/San_Diego
+match = -19.2%%
+title = Trận Gaugamela – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Trận_Gaugamela
 
 [baocaotaichinh.vn]
 match = -19.2%%
