--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-08 23:50:37
+lastsearch = 2024-08-09 01:26:21
 
 [demxanh.com]
 match = 13.8%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [demchatluong.com]
-match = 51.7%%
-title = Bộ Chăn Ga Gối Lụa Pyeoda Skysilk cao cấp
-url = https://demchatluong.com/san-pham/bo-chan-ga-goi-lua-pyeoda-skysilk/
+match = -17.2%%
+title = Bộ Chăn Ga Gối Tencel Adaptive 5 món - Đệm Chất Lượng
+url = https://demchatluong.com/san-pham/bo-chan-ga-goi-tencel-adaptive-5-mon/
 
 [changagoinemgiasi.com]
 match = 3.4%%
@@ -27,9 +27,9 @@ title = Bộ Chăn Ga Gối Lụa Tencel (Pyeoda Sky Silk) - Nệm Cao Su
 url = https://changagoinemgiasi.com/san-pham/bo-chan-ga-goi-lua-tencel-pyeoda-sky-silk/
 
 [shopee.vn]
-match = -27.6%%
-title = Bộ chăn ga vỏ gối lụa 5 món Skysilk hàng Pyeoda cao cấp ...
-url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeoda-cao-cấp-có-túi-đựng-i.60303676.20559202272
+match = -20.7%%
+title = bộ chăn ga pyeoda giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda&urlold=bo-chan-ga-goi-lua-pyeoda-kt-1m8-mau-lp1/4647385422273837956/3385656584626545253/ 
 
 [thegioidemonline.com]
 match = 34.5%%
