--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-08 18:14:19
+lastsearch = 2024-08-09 01:25:39
 
 [chanrathanhthuy.com]
-match = -3.2%%
-title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
+match = -9.7%%
+title = Nên chọn màu sắc chăn ga gối đệm theo tuổi chồng hay vợ
+url = https://chanrathanhthuy.com/tin-tuc/nen-chon-mau-sac-chan-ga-goi-dem-theo-tuoi-chong-hay-vo-1273.html
 
 [demxanh.com]
 match = 38.7%%
@@ -52,8 +52,8 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [everonvn.com.vn]
-match = -19.4%%
-title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
+match = -41.9%%
+title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [lizd.vn]
