--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-08 23:57:10
+lastsearch = 2024-08-09 01:29:22
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -32,9 +32,9 @@ title = Nghi thức đọc tụng trên xe về chùa vào các ngày 14, 30 và
 url = https://phamthiyen.com/nghi-thuc-doc-tung-tren-xe-ve-chua-vao-cac-ngay-14-30-va-cac-ngay-ve-chua-lam-phan-su-c1687.html
 
 [langmai.org]
-match = -68.8%%
-title = Văn bản 14 giới Tiếp Hiện tân tu
-url = https://langmai.org/cong-tam-quan/dong-tu-tiep-hien/gioi-ban-tiep-hien-tan-tu/
+match = -18.8%%
+title = Tụng 14 Giới Tiếp Hiện
+url = https://langmai.org/phat-duong/tung-gioi/tung-14-gioi-tiep-hien/
 
 [phaata.com]
 match = -118.8%%
@@ -42,9 +42,9 @@ title = Ho Chi Minh ZIP code - The most updated ...
 url = https://phaata.com/en/zip-code/ho-chi-minh-zip-code-1309.html
 
 [www.youtube.com]
-match = -125.0%%
-title = Akshan 1 Chiêu Cuối 1 Mạng #shorts #vantung ...
-url = https://www.youtube.com/watch?v=95NRrIIzcBE
+match = -243.8%%
+title = Dự báo thời tiết hôm nay và ngày mai 14/1 | Dự báo thời tiết ...
+url = https://www.youtube.com/watch?v=z8xbCc-s6pE
 
 [vietbis.vn]
 match = -193.8%%
@@ -520,4 +520,9 @@ url = https://www.vinamilk.com.vn/en/mobile/distribution/domestic-market
 match = -137.5%%
 title = The Yen Tu Complex of Monuments and Landscapes
 url = https://whc.unesco.org/en/tentativelists/6508/
+
+[noibaiairport.vn]
+match = -20.0%%
+title = chuyến bay
+url = https://noibaiairport.vn/vi/departures
 
