--- a/images/man-khung/config.ini
+++ b/images/man-khung/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-khung.html
 lastopen = 2024-06-07 00:53:59
 
 [search]
-lastsearch = 2024-08-08 23:36:10
+lastsearch = 2024-08-09 01:24:14
 
 [mungmocmien.com]
 match = -88.9%%
@@ -72,9 +72,9 @@ title = Mẫu Màn Khung Xếp Gọn Thông Minh ...
 url = https://remduongthao.com/man-khung/man-khung-xep-gon/
 
 [www.instagram.com]
-match = -133.3%%
-title = Simon Khung (@simonboyyyyyyy)
-url = https://www.instagram.com/_u/simonboyyyyyyy/?utm_source=ig_embed&ig_rid=918b020c-e4a1-4e67-8cf8-2064ec7ecccb&ig_mid=119E3635-71E5-4FF0-B3AC-7AF2D297E811
+match = -522.2%%
+title = Simon Khung | “A man’s role is to put food on the table. The ...
+url = https://www.instagram.com/simonboyyyyyyy/reel/C8_1H1sh4gt/?locale=伊朗营业执照如何快速拿到〖客服威信+TG/飞机:@buth2788〗eLF3A{????1}SwQuO&hl=ar
 
 [www.flickr.com]
 match = -11.1%%
@@ -102,9 +102,9 @@ title = Pin by Yong Khung Mun on My Saves | Asian man haircut ...
 url = https://www.pinterest.com/pin/my-saves--298856125286597435/
 
 [m.facebook.com]
-match = 100.0%%
-title = Man Khung
-url = https://m.facebook.com/people/Man-Khung/100070522172819/
+match = 11.1%%
+title = Khung Man
+url = https://m.facebook.com/khung.man.395
 
 [cnalifestyle.channelnewsasia.com]
 match = 0.0%%
