--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-09 00:00:38
+lastsearch = 2024-08-09 01:22:46
 
 [www.bible.com]
 match = -64.7%%
@@ -47,9 +47,9 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
-url = https://www.bibleref.com/Mark/2/Mark-2-22.html
+match = -23.5%%
+title = What does Matthew 20:22 mean?
+url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
 match = -111.8%%
@@ -109,7 +109,7 @@ url = http://www.bing.com/
 [espndeportes.espn.com]
 match = -82.4%%
 title = Programación de 20 de Jul. al 27 de Jul.
-url = https://espndeportes.espn.com/sports/tvlistings/deportes/scheduleWeek?date=20130720&sport=all&country=falkland_islands_(malvinas)
+url = https://espndeportes.espn.com/sports/tvlistings/deportes/scheduleWeek?date=20130720&sport=all&country=Resto_del_Caribe
 
 [www.amazon.com]
 match = -188.2%%
