--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-08-09 00:00:59
+lastsearch = 2024-08-09 01:28:01
 
 [xoptraisan.info]
 match = -115.8%%
@@ -12,9 +12,9 @@ title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
 url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamaulac.com.vn]
-match = -31.6%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -78.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [thamvinhthuan.com]
 match = 26.3%%
@@ -27,9 +27,9 @@ title = Thảm xốp – THAMHT.VN
 url = https://thamht.vn/collections/tham-xop
 
 [shopee.vn]
-match = -94.7%%
-title = thảm ghép 60x60cm giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
+match = -73.7%%
+title = thảm xốp ghép giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm xốp ghép
 
 [thamtretho.com]
 match = 37.5%%
@@ -52,9 +52,9 @@ title = Thảm xốp trải lót sàn mặt nỉ hoa văn 60x60 giá rẻ
 url = http://thamsami.com/san-pham/314/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam.html
 
 [trieuchau.com]
-match = -68.4%%
-title = 60*60*10 tấm- Thảm xốp mặt nỉ hoa văn Âu Lạc
-url = http://trieuchau.com/vi-vn/1057/28071/Tham-Xop-60x60cm/606010-tam-Tham-xop-mat-ni-hoa-van-Au-Lac
+match = -78.9%%
+title = 60*60*4 tấm - Thảm xốp trải sàn vân gỗ Âu Lạc
+url = http://trieuchau.com/vi-vn/1057/28074/Tham-Xop-60x60cm/60604-tam--Tham-xop-trai-san-van-go-Au-Lac
 
 [thamachau.vn]
 match = -52.6%%
