--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-09 01:27:42
+lastsearch = 2024-08-09 01:43:05
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -347,9 +347,9 @@ title =
 url = https://pc.fsu.edu/
 
 [books.google.com]
-match = -316.7%%
-title = Gazetteer - Issues 11-13 - Page 24 - Google Books Result
-url = https://books.google.com/books?id=tTo9AAAAIAAJ&pg=RA1-PA24&lpg=RA1-PA24&dq=ga+phu+uc+16&source=bl&ots=BHZEeqFx7x&sig=ACfU3U3AyLyeUTth8nJpztJSdFW7QMoLlQ&hl=en&sa=X&ved=2ahUKEwjI7caFjuWHAxUdF1kFHXB6HvkQ6AF6BAgiEAM
+match = -333.3%%
+title = Der n-tv-Atlas: die Welt hinter den Nachrichten ; [mit ...
+url = https://books.google.com/books?id=lFboHwfSwFsC&pg=PA360&lpg=PA360&dq=ga+phu+uc+16&source=bl&ots=-SL0vyQFTF&sig=ACfU3U0RDKnx6u4E8Dz9wb5jQ8waUglTyw&hl=en&sa=X&ved=2ahUKEwjik-ethuaHAxX_IzQIHWp5Js4Q6AF6BAgkEAM
 
 [issuu.com]
 match = -175.0%%
