--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-08 23:51:40
+lastsearch = 2024-08-09 01:47:39
 
 [burningman.org]
 match = -60.0%%
@@ -147,9 +147,9 @@ title = U.S. Food and Drug Administration
 url = https://www.fda.gov/
 
 [boardofwatersupply.com]
-match = -73.3%%
-title = Bongdatructuyen 24 7 táºp 1 trang 118
-url = https://boardofwatersupply.com/appGgWZQDXVkf
+match = -166.7%%
+title = Trang web mua vÃ© bÃ³ng Ä'Ã¡ nÆ°á»›c ngoÃ i
+url = https://boardofwatersupply.com/appKUUSr/79405.csv
 
 [steamcommunity.com]
 match = -193.3%%
@@ -930,4 +930,9 @@ url = https://www.santamonica.gov/
 match = -253.3%%
 title = Portland's Leading Local News: Weather, Traffic, Sports and ...
 url = https://www.kgw.com/
+
+[www.realmadrid.com]
+match = -18.2%%
+title = Real Madrid
+url = https://www.realmadrid.com/en-US
 
