--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-08 20:37:33
+lastsearch = 2024-08-09 01:44:49
 
 [www.facebook.com]
-match = -141.2%%
-title = Mom asked "have anyone heard of Mo Dan? My fren ...
+match = -164.7%%
+title = Mom asked "have anyone heard of Mo... - The New Age ...
 url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-of-mo-dan-my-fren-has-been-fever-on-and-off-for-almo/10150974043136876/
 
 [www.teadrunk.com]
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -229.4%%
+title = Indoor tanning early in life is associated with increased risk ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8446110/
 
 [books.google.com]
 match = -217.6%%
