--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-08 23:43:13
+lastsearch = 2024-08-09 01:44:28
 
 [tiki.vn]
 match = -133.3%%
@@ -17,9 +17,9 @@ title = Chăn cừu pháp Joliefam ghi tối
 url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
 
 [www.lazada.vn]
-match = -166.7%%
-title = Chan Long Cuu 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-long-cuu-2m/
+match = -66.7%%
+title = Chăn Lông Cừu 2mx2m2 Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/chan-long-cuu-2mx2m2/
 
 [tokyolife.vn]
 match = -193.3%%
@@ -37,9 +37,9 @@ title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasan
 url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
-match = -173.3%%
-title = Chăn lông cừu - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chăn/lông cừu
+match = -153.3%%
+title = chăn lông cừu 2 lớp giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chăn lông cừu 2 lớp
 
 [changadep88.vn]
 match = -86.7%%
