--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-08 21:36:01
+lastsearch = 2024-08-09 01:38:53
 
 [everonvn.com.vn]
-match = -94.4%%
-title = Bộ Everon Ep 1738 - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738
+match = -111.1%%
+title = Bảng Giá Vỏ Gối Hàn Quốc Everon Est-20034 Màu Tím
+url = https://everonvn.com.vn/everon/4749/vo-goi-everon-est-20034?srsltid=AfmBOorIPOvIVvYHvqkzrn9dyIIQqbkEqJVRBClJ6tQ1qwrASMTxfZc2
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOopXI3sY6-hR2b7YEW4VEi3aO7LOLKCrkSp7DRthy2CySln8fNUz
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,7 +34,7 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Vỏ gối EP1818 45x65
-url = https://www.diepxuan.com/vo-goi-ep1818-45x65.html
+url = https://www.diepxuan.com/vo-goi-ep1818-45x65.html?srsltid=AfmBOoo8IAbWs8hgMHfQutCixX0turpw6ESg6ght3xQ7Zi_IZE0bzVBG
 
 [www.everonqb.com]
 match = -111.1%%
