CI images update

--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-09 00:33:42
+lastsearch = 2024-08-09 01:53:10
 
 [shopee.vn]
-match = -40.7%%
-title = Chiếu điều hòa mây lạnh cao cấp 2 lớp ( loại 1, có nhiều ...
-url = https://shopee.vn/Chiếu-điều-hòa-mây-lạnh-cao-cấp-2-lớp-(-loại-1-có-nhiều-loại-kích-thước)-không-kèm-vỏ-gối-i.17226131.25877940173
+match = -3.7%%
+title = CHIẾU ĐIỀU HÒA SỢI MẤY LÓT LỤA CAO CẤP HÀNG ...
+url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-SỢI-MẤY-LÓT-LỤA-CAO-CẤP-HÀNG-LOẠI-1-i.914808892.24557268713
 
 [demxanh.com]
 match = -14.8%%
