--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-08 23:22:28
+lastsearch = 2024-08-09 01:51:48
 
 [en.wikipedia.org]
-match = 10.0%%
-title = Anti-Korean sentiment
-url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -522,9 +522,9 @@ title = 'Big Brother' Sneak Peek: Kimo Tells Tucker a Key Secret ...
 url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-sneak-peek-kimo-tells-tucker-a-key-secret-video/article_1617f93a-04a3-5cec-9c37-a0657008888c.html
 
 [www.wdtn.com]
-match = -130.0%%
-title = FBI: California woman brought sword, whip and other ...
-url = https://www.wdtn.com/news/politics/ap-politics/ap-fbi-california-woman-brought-sword-whip-and-other-weapons-into-capitol-during-jan-6-riot/
+match = -135.0%%
+title = Could another insurrection happen in January? This film ...
+url = https://www.wdtn.com/news/politics/ap-politics/ap-could-another-insurrection-happen-in-january-this-film-imagines-what-if/
 
 [www.localsyr.com]
 match = -130.0%%
@@ -535,4 +535,9 @@ url = https://www.localsyr.com/news/your-local-election-hq/ap-fbi-california-wom
 match = -105.0%%
 title = Utah Royals win big, do not move on in Summer Cup
 url = https://www.abc4.com/news/utah-royals-win-big-do-not-move-on-in-summer-cup/
+
+[overseas.mofa.go.kr]
+match = -55.0%%
+title = Embassy of the Republic of Korea in the USA
+url = https://overseas.mofa.go.kr/us-en/index.do
 
