--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -23,8 +23,8 @@ url = https://www.sendo.vn/tham-chan-giuong.htm
 
 [tiki.vn]
 match = -38.1%%
-title = Tham trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=tham trải giường
+title = Thảm trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải giường
 
 [flexhouse.vn]
 match = -42.9%%
