--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-09 00:18:02
+lastsearch = 2024-08-09 02:03:17
 
 [www.zillow.com]
 match = -115.4%%
@@ -52,9 +52,9 @@ title = Period (periodic table)
 url = https://en.wikipedia.org/wiki/Period_(periodic_table)
 
 [www.youtube.com]
-match = -61.5%%
-title = Adele talks about her dad
-url = https://www.youtube.com/watch?v=b6ACqvgdI5k
+match = -215.4%%
+title = Jay-Z & Kanye West - Ni**as In Paris (Explicit)
+url = https://www.youtube.com/watch?v=gG_dA32oH44
 
 [ww2.arb.ca.gov]
 match = -284.6%%
