--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-09 00:01:21
+lastsearch = 2024-08-09 01:50:02
 
 [www.everonvn.vn]
 match = -105.0%%
@@ -47,8 +47,8 @@ title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
 url = https://everon.com.vn/kich-co/120200/
 
 [demqueensweet.com]
-match = -65.0%%
-title = Đệm Queensweet Giá Rẻ – Đệm Hàn Quốc ...
+match = -130.0%%
+title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
 url = https://demqueensweet.com/
 
 [www.lazada.vn]
@@ -72,8 +72,8 @@ title = Đệm Sóng Everon
 url = https://everon.online/products/dem-song-everon
 
 [everonxuankhieu.vn]
-match = -90.0%%
-title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ ...
+match = -105.0%%
+title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ VÀ ...
 url = https://everonxuankhieu.vn/dem-bong-ep-everon/
 
 [nemgiagoc.vn]
@@ -139,7 +139,7 @@ url = https://www.sieuthinem.vn/nem-everon.html
 [vuanem.com]
 match = -45.0%%
 title = Chăn Ga Gối Nệm Everon Chính Hãng Giá Rẻ
-url = https://vuanem.com/brand/everon?srsltid=AfmBOor_yjBQrfMqFcy0Ae4D0676H16oTkfPiqVRN8OLzyTHTlE0g4i3
+url = https://vuanem.com/brand/everon
 
 [www.khodemthanhdo.com]
 match = -20.0%%
