--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-08-08 22:53:09
+lastsearch = 2024-08-09 01:46:05
 
 [shopee.vn]
-match = -123.8%%
-title = Giường Bumper Bed Bảo Vệ Bé Yêu An Toàn Yên Tâm Vui ...
-url = https://shopee.vn/Giường-Bumper-Bed-Bảo-Vệ-Bé-Yêu-An-Toàn-Yên-Tâm-Vui-Chơi-Phát-Triển-Thương-hiệu-Dono-Dono-Hàn-Quốc-i.739965304.21859208735
+match = -76.2%%
+title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [cafeland.vn]
 match = -100.0%%
