--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-08 20:57:40
+lastsearch = 2024-08-09 01:59:09
 
 [suongtuyet.com]
 match = 16.0%%
@@ -22,9 +22,9 @@ title = Đệm bông ép Tuấn Anh chính hãng giá tốt nhất thị trườ
 url = https://demxanh.com/dem-bong-ep-tuan-anh.html
 
 [shopee.vn]
-match = 43.5%%
-title = Đệm korea plus TUẤN ANH
-url = https://shopee.vn/Đệm-korea-plus-TUẤN-ANH-i.138900891.5301651649
+match = -40.0%%
+title = nệm tuấn anh giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=nệm tuấn anh
 
 [demkhangduy.com]
 match = 25.0%%
