--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-08-08 23:15:51
+lastsearch = 2024-08-09 01:58:48
 
 [www.diepxuan.com]
 match = 26.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoo2HM6ks94QVA7EUEvl6OXp3WFNGzb4-QGjguGBjKRthvW0-Cep
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demkhangduy.com]
 match = -25.0%%
@@ -19,12 +19,12 @@ url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 [demxanh.com]
 match = -100.0%%
 title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
-url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html?srsltid=AfmBOop6_j_cjMhtcN04ZHOkw12izsUduQ9OFFXmB6-IfCSNyzJMHj5O
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
 
 [tuananh.vn]
 match = 10.0%%
-title = LÒ XO TÚI RUBY POTENCY
-url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
+title = LÒ XO TÚI RUBY MASTERY
+url = https://tuananh.vn/lo-xo-tui-ruby-mastery-p444.html
 
 [dem24h.vn]
 match = -35.0%%
@@ -34,7 +34,7 @@ url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
 [demviethome.vn]
 match = -140.0%%
 title = Đệm lò xo túi Tuấn Anh Adaptive chính hãng giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive/?srsltid=AfmBOoq2fI5w7amwHZUkTeocmg-m44ZbN86N5yKiQHgJXCZmOe-oYDAC
+url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive/
 
 [bedding.vn]
 match = -25.0%%
