CI images update

--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-08-09 01:57:02
+lastsearch = 2024-08-09 02:20:29
 
 [chieutruc.info]
 match = -73.9%%
@@ -14,7 +14,7 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = -21.7%%
 title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html
+url = https://demxanh.com/chieu-truc-cao-bang.html?srsltid=AfmBOorhuc23qJtnScVHv_j_YXdfPWdD1oXc_b7MT78hVc1krA3CTqGZ
 
 [chieutrucsaigon.com]
 match = -13.0%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOoqPHKMahk8H8Qzi9nvWi6tthiv1M0MSCGRbx4sEGVU-WZf3gLvt
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
