--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-09 01:49:38
+lastsearch = 2024-08-09 02:19:26
 
 [tiki.vn]
 match = -138.9%%
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -116.7%%
-title = Bộ Ga (Drap) Nệm Cotton Đặc Biệt Edena Mẫu 524
-url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-dac-biet-edena-mau-524-chinh-hang-cao-cap
+match = -105.6%%
+title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
+url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
@@ -73,8 +73,8 @@ url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp
 
 [antbedding.com]
 match = 33.3%%
-title = Bộ Chăn Ga Gối Eu06
-url = https://antbedding.com/bo-chan-ga-goi-eu06
+title = Bộ Chăn Ga Gối Eu07
+url = https://antbedding.com/bo-chan-ga-goi-eu07
 
 [www.mym.com.vn]
 match = -57.1%%
