--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-09 00:16:18
+lastsearch = 2024-08-09 02:19:05
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -181.2%%
-title = Thị trường chứng quyền 09/08/2024: Triển vọng thị ...
-url = https://vietstock.vn/2024/08/thi-truong-chung-quyen-09082024-trien-vong-thi-truong-van-con-tieu-cuc-1636-1217599.htm
+match = -25.0%%
+title = Góc nhìn 09/08: Rung lắc?
+url = https://vietstock.vn/2024/08/goc-nhin-0908-rung-lac-145-1217731.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -432,9 +432,9 @@ title = Đi xe đạp ngược chiều trên cao tốc, 1 cậu bé đi lạc đ
 url = https://suckhoedoisong.vn/di-xe-dap-nguoc-chieu-tren-cao-toc-1-cau-be-di-lac-duoc-csgt-ho-tro-169240621123917145.htm
 
 [www.cgv.vn]
-match = 0.0%%
-title = CGV Xuân Diệu
-url = https://www.cgv.vn/default/cinox/site/cgv-d-le-roi-soleil
+match = 6.2%%
+title = CGV Buôn Mê Thuột
+url = https://www.cgv.vn/default/cinox/site/cgv-buon-me-thuot
 
 [developers.cloudflare.com]
 match = -31.2%%
