--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-08-08 22:47:09
+lastsearch = 2024-08-09 02:14:13
 
 [thegioidemviet.vn]
 match = 21.4%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/chieu-truc-p17.html
 [demxanh.com]
 match = -28.6%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopTiXMzcLva3RyEbKJ4DKhBpALNRCCPdMwwFdtPrXN_2qVtEy94
+url = https://demxanh.com/chieu-truc.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -44,7 +44,7 @@ url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-c
 [www.lazada.vn]
 match = 0.0%%
 title = Chiếu Trúc Hạt Quế Lâm hàng loại 1 tem xanh 1m2, 1m5 ...
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-hang-loai-1-tem-xanh-1m2-1m5-1m6-i732230394.html?srsltid=AfmBOorYmDe5T4Y7TYhhp2IAPuB-5OVHsmiPJPjd6aMT0erIXPk4ORvi
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-hang-loai-1-tem-xanh-1m2-1m5-1m6-i732230394.html
 
 [thegioidemonline.com]
 match = -39.3%%
