--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-08 22:23:28
+lastsearch = 2024-08-09 02:16:20
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,18 +12,18 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -14.3%%
-title = Đệm bông ép Everhome 2m giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-2m-gia-bao-nhieu.html
+match = -19.0%%
+title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
 
 [www.ebay.com]
-match = -100.0%%
-title = Everhome 700 TC 100%% Egyptian Cotton Deep Fitted ...
-url = https://www.ebay.com/itm/256326842231
+match = -128.6%%
+title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep Fitted ...
+url = https://www.ebay.com/itm/256190021356
 
 [www.quora.com]
-match = -109.5%%
-title = What are some examples where Vietnamese was written ...
+match = 9.5%%
+title = Vietnamese mixed script
 url = https://www.quora.com/What-are-some-examples-where-Vietnamese-was-written-in-mixed-Han-Latin-script
 
 [sieuthidemonline.vn]
