CI images update

--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-08-08 20:51:02
+lastsearch = 2024-08-09 02:40:10
 
 [demxanh.com]
 match = 0.0%%
@@ -12,8 +12,8 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.lazada.vn]
-match = -91.3%%
-title = Thảm Lì Bali - Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp ...
+match = -117.4%%
+title = Thảm Lì Bali - Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang ...
 url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010-s11108591003.html?from_gmc=1&fl_tag=1
 
 [tiki.vn]
