--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-08 23:49:53
+lastsearch = 2024-08-09 02:32:12
 
 [changagoidemsonghong.com]
 match = 18.5%%
@@ -24,7 +24,7 @@ url = https://demviethong.com/chan-ga-goi-song-hong-uc16/
 [demxanh.com]
 match = 48.1%%
 title = Bộ ga gối hoạt hình Cotton CT16
-url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOorXvVjro9D-wLdNGxNJK0xixiIkGWpKfKjjbBX5vOKTQrdrmPzo
+url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html
 
 [chanrathanhthuy.com]
 match = -90.9%%
