--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-08 16:16:39
+lastsearch = 2024-08-09 02:39:30
 
 [agasound.vn]
 match = 6.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOoomAUkKRMBykgVlcHz_ZSx1AeAUMN4-1xGD9RAlzb8pYRHCeREO
+url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
 match = -186.7%%
@@ -83,8 +83,8 @@ url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
 
 [m.facebook.com]
 match = -140.0%%
-title = Ways Station Gaming - "T hết tiền rồi ...
-url = https://m.facebook.com/waysstation/photos/t-hết-tiền-rồi-tối-nay-đừng-đi-bar-ra-net-nhé-cho-rẻ-t-chơi-pubg-còn-m-chơi-liên/1163379434092678/
+title = Học sinh Hà Nội | tìm trẻ lạc ở D2-K4 Khương Hạ
+url = https://m.facebook.com/groups/HocSinhHN/posts/1619274242051764/
 
 [vietnamairport.vn]
 match = -93.3%%
@@ -319,7 +319,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [www.chieuduong.vn]
 match = 0.0%%
 title = Micro chính hãng
-url = https://www.chieuduong.vn/collections/micro-chinh-hang?srsltid=AfmBOorWZ-6rJwIL_dahnxm-tUDvlq_xVZ-nqDcKV5l8VgPBUQ9hbVIm
+url = https://www.chieuduong.vn/collections/micro-chinh-hang
 
 [saca.com.vn]
 match = -366.7%%
