--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-08 23:37:15
+lastsearch = 2024-08-09 02:27:54
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu trúc thai đen14 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den14.html
+url = https://www.diepxuan.com/chieu-truc-thai-den14.html?srsltid=AfmBOoqpNYf14AYK8kWMV5Ue7PzsPDrEkLd2_VE40anIkrtSRIQXDzli
 
 [demxanh.com]
 match = -28.6%%
@@ -19,7 +19,7 @@ url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOop6UKE79CMEnZPn7QgmDYNppeEJlP6BTwvAGDjzDB9VV3SOpiH5
 
 [tiki.vn]
 match = -42.9%%
@@ -277,9 +277,9 @@ title = Mức đóng bảo hiểm xã hội của công chức thay đổi thế
 url = https://bptv.vn/news/9/159224/muc-dong-bao-hiem-xa-hoi-cua-cong-chuc-thay-doi-the-nao-khi-luong-co-so-du-kien-tang-30
 
 [m.facebook.com]
-match = -152.4%%
-title = "Những học trò của tôi đã động viên tôi ra tranh cử. Họ thấy ...
-url = https://m.facebook.com/datvietdotcom/photos/ngày-6-8-ứng-viên-tổng-thống-mỹ-của-đảng-dân-chủ-kamala-harris-đã-có-lần-đầu-tiê/812940147629577/
+match = -95.2%%
+title = casual Đà nẵng | KHÁCH SẠN SEL DE MER HOTEL & ...
+url = https://m.facebook.com/groups/303223456724518/posts/2101917873521725/
 
 [thuvienphapluat.vn]
 match = -109.5%%
@@ -632,9 +632,9 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = -57.1%%
-title = Tìm hiểu sự phát triển của thai nhi 21 tuần tuổi
-url = https://www.vinmec.com/vie/bai-viet/tim-hieu-su-phat-trien-cua-thai-nhi-21-tuan-tuoi-vi
+match = 0.0%%
+title = Sự phát triển của thai nhi tuần 4
+url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-4-vi
 
 [www.hcmcpv.org.vn]
 match = -104.8%%
