--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-09 00:16:39
+lastsearch = 2024-08-09 02:25:06
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOorUx7aeVEp_yYGo_wFVSGUo1W0rCDu9plzrFbVULou1jWkoyi2_
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
 match = -38.1%%
@@ -19,7 +19,7 @@ url = https://www.everonqb.com/bo-ga-phu-epcarless-160x200.html
 [www.diepxuan.com]
 match = -19.0%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOoruRT3Qkb_QTUTpkUkgCz0I0OvGWZ161pQy9QJ9KyMGjolollQW
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [muathongminh.vn]
 match = -142.9%%
@@ -27,8 +27,8 @@ title = Trọn bộ chăn ga gối satin poly 7 món ga phủ trần bông ...
 url = https://muathongminh.vn/tron-bo-chan-ga-goi-satin-poly-7-mon-ga-phu-tran-bong-koseul-san-hang-p.1__7418213403__16397825
 
 [beecost.vn]
-match = -147.6%%
-title = Srm set chăn ga gối 5 món cotton living drap hàn quốc ...
+match = -176.2%%
+title = Lịch sử giá Srm set chăn ga gối 5 món cotton living drap hàn ...
 url = https://beecost.vn/srm-set-chan-ga-goi-5-mon-cotton-living-drap-han-quoc-ga-phu-giuong-chan-bong-day-cao-cap-he-thong-n-p.1__9631034161__146302121
 
 [www.reef2reef.com]
