--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-08 23:41:07
+lastsearch = 2024-08-09 03:01:46
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -23,8 +23,8 @@ url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
 match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH08
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh08
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH07
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh07
 
 [shopee.vn]
 match = -2.9%%
@@ -54,7 +54,7 @@ url = https://happynest.vn/shop/EBGCTBM1820EST23035/bo-ga-chun-chan-bon-mua-sac-
 [everon.com.vn]
 match = 15.4%%
 title = Bộ Chăn Ga Everon ESM21013
-url = https://everon.com.vn/bo-chan-ga-everon-esm21013/?srsltid=AfmBOopQVaLIgj_lqO__wPgiakLd3y5sWDMdRdOY00rF8R_aMYq9GivK
+url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
 
 [chandrapsaigon.com]
 match = -11.8%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022?srsltid=AfmBOorYcxGPc9Sbmcps8CDrmUfauUYlV6bC5KPULZJTnQJOVHVJJEXw
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
@@ -114,7 +114,7 @@ url = https://changagoidemsonghong.online/ga-goi-song-hong-basic-bc24107.html
 [everonvn.com.vn]
 match = -4.2%%
 title = Bộ Everon Ep1822 - Sheep
-url = https://everonvn.com.vn/everon/623/bo-everon-ep1822?srsltid=AfmBOoqLkyU-YXpEo6fg5nov9qtehNkIdue9eSYIWCPXsTUgJOMf_vpn
+url = https://everonvn.com.vn/everon/623/bo-everon-ep1822
 
 [staging.happynest.com.vn]
 match = -8.8%%
