--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-08 22:55:56
+lastsearch = 2024-08-09 02:48:30
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -17,9 +17,9 @@ title = Bộ ga chun Velina V18 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -104.8%%
-title = Bộ Chăn Ga Gối Trải Giường Poly Cotton bo chun miễn phí ...
-url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Trải-Giường-Poly-Cotton-bo-chun-miễn-phí-Ga-trải-giường-BÒ-XÁM-i.600110082.21919470309
+match = -114.3%%
+title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
 match = -57.1%%
