--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-08 21:46:49
+lastsearch = 2024-08-09 02:44:21
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -42,9 +42,9 @@ title = Chăn Ga Gối Nệm Đẹp, Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/bo-vo-chan-goi-ga
 
 [songhong.info]
-match = 10.7%%
-title = Mẫu chăn ga gối cao cấp mã mầu UC22-019
-url = https://songhong.info/chan-ga-goi-uc019
+match = 35.7%%
+title = Bộ chăn ga gối cao cấp mã UC22-018
+url = https://songhong.info/chan-ga-goi-uc018
 
 [cuahangchangagoidem.com]
 match = -7.1%%
