--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-09 02:19:26
+lastsearch = 2024-08-09 02:55:51
 
 [tiki.vn]
-match = -138.9%%
-title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-la-160-x-200-cm-p7855499.html
+match = -144.4%%
+title = Mua Bộ Chăn Ga Gối Everon mẫu mới nhất của năm 2021. ...
+url = https://tiki.vn/bo-chan-ga-goi-everon-cao-cap-mau-moi-nhat-cua-nam-2021-bo-san-pham-gom-1-ga-phu-hoac-ga-chun-chan-co-gia-chi-tiet-theo-san-pham-1-chan-4-mua-co-chan-lop-bong-mong-ben-trong-2-vo-goi-nam-co-45x65cm-p71564428.html?spid=76160906
 
 [nemxinh.net]
 match = 50.0%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Elegant H82 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-elegant-h82
+match = -61.1%%
+title = Bộ ga phủ Common C104 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-common-c104
 
 [aeoneshop.com]
 match = -105.6%%
@@ -52,9 +52,9 @@ title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
 url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam
 
 [everonvn.com.vn]
-match = -155.6%%
-title = Bảng Giá Bán Bộ Chăn Ga Gối Hàn Quốc Everon Esm-20011 ...
-url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
+match = -116.7%%
+title = Bộ Ga Chun Chần Everon Green-Solid Giảm Giá 35%%
+url = https://everonvn.com.vn/everon/2149/bo-ga-chun-chan-green-solid
 
 [www.everonvni.vn]
 match = -77.8%%
@@ -137,9 +137,9 @@ title = FITIN
 url = https://www.facebook.com/fitin.vn/
 
 [www.diepxuan.com]
-match = -38.9%%
-title = Bộ ga phủ WarmDream 160x200 HQ - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html
+match = 27.8%%
+title = Bộ phủ màu 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-phu-mau-180x200.html
 
 [dovihome.vn]
 match = 0.0%%
@@ -190,4 +190,9 @@ url = https://www.sieuthinem.vn/bo-ra-edena-tencel-730.html
 match = -11.1%%
 title = Bộ Drap Gối Cotton Màu - 08
 url = https://mym.com.vn/bo-drap-goi-cotton-mau-08
+
+[vuanem.com]
+match = -155.6%%
+title = Bộ chăn ga phủ Lụa tencel cao cấp Amando Confident 5 ...
+url = https://vuanem.com/bo-phu-amando-confident-5-chi-tiet-mau-nau.html
 
