--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-08 23:25:58
+lastsearch = 2024-08-09 02:55:29
 
 [shopee.vn]
-match = 14.3%%
-title = CHIẾU ĐIỀU HÒA SỢI MẤY LÓT LỤA CAO CẤP HÀNG ...
-url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-SỢI-MẤY-LÓT-LỤA-CAO-CẤP-HÀNG-LOẠI-1-i.914808892.24557268713
+match = -25.0%%
+title = Chiếu mây điều hòa lót lụa cao cấp có chun bo góc giúp cố ...
+url = https://shopee.vn/Chiếu-mây-điều-hòa-lót-lụa-cao-cấp-có-chun-bo-góc-giúp-cố-định-chiếu-Chiếu-điều-hoà-sợi-mây-viền-lụa-thoáng-khí-tốt-i.472596491.13662110393
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -27,9 +27,9 @@ title = Sử dụng chiếu điều hòa có tốt hay không?
 url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
-match = 10.7%%
-title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu lụa điều hòa
+match = 28.6%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [sieuthidem.vn]
 match = 32.1%%
