--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-09 01:36:47
+lastsearch = 2024-08-09 02:49:36
 
 [demxanh.com]
 match = 42.4%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoqyDpCkU3BZDqh6p5zSzH7EGoqoBeSkTZBMKhdzHM2INsKvsrBj
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -64,7 +64,7 @@ url = https://chieutrelanlan.com/chia-se-nhung-dia-chi-mua-chieu-truc-tam-uy-tin
 [vongxepsaigon.vn]
 match = -30.3%%
 title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-160cm/
 
 [caicachhanhchinhhungyen.com.vn]
 match = 0.0%%
