--- a/images/nem-everon-150x190x9/config.ini
+++ b/images/nem-everon-150x190x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-150x190x9.html
 lastopen = 2024-06-06 17:10:22
 
 [search]
-lastsearch = 2024-08-09 02:32:54
+lastsearch = 2024-08-09 02:57:37
 
 [everonvn.com.vn]
 match = 15.0%%
@@ -49,12 +49,12 @@ url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 [demxanh.com]
 match = -140.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOoorOu-VGu4lD2X1r-YNgDH1TeojPYPM3UCABld_ftyi6SIqmKFj
 
 [thegioidemonline.com]
 match = -40.0%%
 title = Bảng giá nệm Sông Hồng mới nhất 2022
-url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html
+url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html?srsltid=AfmBOoo2bjkpHiccqHzYLlQv1CY65JX9jieGQ7h3h-4SUwSjv1IT-CGl
 
 [www.diepxuan.com]
 match = 0.0%%
