--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-08 14:34:41
+lastsearch = 2024-08-09 03:00:00
 
 [www.lazada.vn]
 match = -94.4%%
 title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+url = https://www.lazada.vn/tag/nem-sieu-nhe/?srsltid=AfmBOopth1tDHIjfFY35j1xoHlh8dajNPXFpaojoTcIuDH1dLX3Bhmfn
 
 [m.facebook.com]
 match = -161.1%%
@@ -22,9 +22,9 @@ title = NAN atelier | |𝐅𝐄𝐄𝐃𝐁𝐀𝐂𝐊| My Muse with Nem dress 
 url = https://www.instagram.com/nan__atelier/p/C801bPgPbAg/?locale=代办圣诞岛判决书模版/样本联系{威信+TG/飞机:@buth2788}ayls6??????ѧ??ƾc6a4Y&hl=am-et
 
 [thegioinem.com]
-match = -122.2%%
-title = Nệm Vạn Thành 5cm, 10cm, 15cm, 20cm giá bao nhiêu?
-url = https://thegioinem.com/nem-van-thanh-5cm--10cm-15cm--20cm.html
+match = -111.1%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -94.4%%
-title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
-url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
+match = 11.1%%
+title = Người Việt California
+url = https://www.facebook.com/groups/nvca16/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = 27.8%%
+title = Nem Nuong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-air-fryer?lang=en
 
 [vi.wikipedia.org]
 match = -27.8%%
