--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-09 01:38:11
+lastsearch = 2024-08-09 02:51:41
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,9 +17,9 @@ title = 50 Mẫu Thảm 2m x 3m Thảm Nỉ Bali Trải Sàn Trải Phòng ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.848657871.23586650302
 
 [www.lazada.vn]
-match = -57.1%%
-title = （Liangzhou） THẢM NHUNG TRẢI SÀN BALI 5D MẪU MỚI 2Mx3M
-url = https://www.lazada.vn/products/liangzhou-tham-nhung-trai-san-bali-5d-mau-moi-2mx3m-i2694071431-s13173605917.html?from_gmc=1&fl_tag=1
+match = 23.8%%
+title = Thảm bali 2m x 3m cao cấp
+url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html?srsltid=AfmBOoqEBYQsJ53a3yLv7la7HxVDNnqi69YHEuRVGO2bZQ6dsFFdo5DA
 
 [tiki.vn]
 match = -85.7%%
@@ -54,7 +54,7 @@ url = https://thamsanulisuky.com/san-pham/tham-bali-2mx3m-trai-san-phong-ngu/
 [metric.vn]
 match = -109.5%%
 title = Báo cáo thị trường Thảm phòng khách 3m dành cho doanh ...
-url = https://metric.vn/tham-phong-khach-3m
+url = https://metric.vn/tham-phong-khach-3m?srsltid=AfmBOoorjzPZDO99KEa9nRm77pG8cdgnvePPhb8vB9v5Sl4eTl42yU55
 
 [giadunghienhoa.com]
 match = -38.1%%
